tests/ts_syntax/ts_syntax.exp
Error ------------------------------------------------------------------------------------------ <BUILTINS>/core.js:90:3

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   90| | $ReadOnlyArray<mixed>
         ^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:739:35

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   739|     concat<S = T>(...items: Array<$ReadOnlyArray<S> | S>): Array<T | S>;
                                          ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:752:75

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   752|     every<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): boolean;
                                                                                  ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:764:81

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   764|     filter<This, S: T>(callbackfn: (this: This, value: T, index: number, array: $ReadOnlyArray<T>) => implies value is S, thisArg: This): Array<S>;
                                                                                        ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:770:76

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   770|     filter<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg : This): Array<T>;
                                                                                   ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:780:80

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   780|     find<This, S: T>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => implies value is S, thisArg: This): S | void;
                                                                                       ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:790:74

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   790|     find<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): T | void;
                                                                                 ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:800:79

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   800|     findIndex<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): number;
                                                                                      ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:810:78

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   810|     findLast<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): T | void;
                                                                                     ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:820:83

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   820|     findLastIndex<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): number;
                                                                                          ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:826:77

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   826|     forEach<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): void;
                                                                                    ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:859:76

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   859|     map<U, This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => U, thisArg: This): Array<U>;
                                                                                   ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:870:80

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   870|     flatMap<U, This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => $ReadOnlyArray<U> | U, thisArg: This): Array<U>;
                                                                                       ^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:870:102

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   870|     flatMap<U, This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => $ReadOnlyArray<U> | U, thisArg: This): Array<U>;
                                                                                                             ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:884:44

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   884|     flat(depth: void | 1): Array<T extends $ReadOnlyArray<infer E> ? E : T>;
                                                   ^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:897:84

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   897|       callbackfn: (previousValue: T, currentValue: T, currentIndex: number, array: $ReadOnlyArray<T>) => T,
                                                                                           ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:905:84

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   905|       callbackfn: (previousValue: U, currentValue: T, currentIndex: number, array: $ReadOnlyArray<T>) => U,
                                                                                           ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:913:84

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   913|       callbackfn: (previousValue: T, currentValue: T, currentIndex: number, array: $ReadOnlyArray<T>) => T,
                                                                                           ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:921:84

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   921|       callbackfn: (previousValue: U, currentValue: T, currentIndex: number, array: $ReadOnlyArray<T>) => U,
                                                                                           ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:938:74

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   938|     some<This>(callbackfn: (this : This, value: T, index: number, array: $ReadOnlyArray<T>) => mixed, thisArg: This): boolean;
                                                                                 ^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:1025:81

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1025|     filter<This, S: T>(callbackfn: (this: This, value: T, index: number, array: $ReadOnlyArray<T>) => implies value is S, thisArg: This): Array<S>;
                                                                                         ^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:1084:93

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1084|     flatMap<U, This>(callbackfn: (this : This, value: T, index: number, array: Array<T>) => $ReadOnlyArray<U> | U, thisArg: This): Array<U>;
                                                                                                     ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- <BUILTINS>/core.js:1204:9

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1204|   +raw: $ReadOnlyArray<string>;
                 ^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:1466:45

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1466|     static raw: (callSite: interface {+raw: $ReadOnlyArray<string>}, ...substitutions: $ReadOnlyArray<mixed>) => string;
                                                     ^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:1466:88

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1466|     static raw: (callSite: interface {+raw: $ReadOnlyArray<string>}, ...substitutions: $ReadOnlyArray<mixed>) => string;
                                                                                                ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:1804:66

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1804|         value: null | string | number | boolean | interface {} | $ReadOnlyArray<mixed>,
                                                                          ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:2048:43

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   2048| type WeaklyReferenceable = interface {} | $ReadOnlyArray<mixed>;
                                                   ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:2262:17

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   2262|       T extends $ReadOnlyArray<mixed> ? {[K in keyof T]: Awaited<T[K]>} :
                         ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:2272:17

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   2272|       T extends $ReadOnlyArray<mixed> ? {[K in keyof T]: $SettledPromiseResult<Awaited<T[K]>>} :
                         ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:2783:45

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   2783| declare function queueMicrotask<TArguments: $ReadOnlyArray<mixed>>(
                                                     ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3008:70

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3008|   static (value: boolean | string | number | bigint | interface {} | $ReadOnlyArray<mixed>): bigint;
                                                                              ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3037:31

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3037| type ReturnType<T: ((...args: $ReadOnlyArray<empty>) => mixed) | hook (...args: $ReadOnlyArray<empty>) => mixed> =
                                       ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3037:81

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3037| type ReturnType<T: ((...args: $ReadOnlyArray<empty>) => mixed) | hook (...args: $ReadOnlyArray<empty>) => mixed> =
                                                                                         ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3038:23

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3038|   T extends (...args: $ReadOnlyArray<empty>) => infer Return ? Return :
                               ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3039:28

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3039|   T extends hook (...args: $ReadOnlyArray<empty>) => infer Return ? Return : any;
                                    ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3042:31

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3042| type Parameters<T: ((...args: $ReadOnlyArray<empty>) => mixed) | hook (...args: $ReadOnlyArray<empty>) => mixed> =
                                       ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3042:81

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3042| type Parameters<T: ((...args: $ReadOnlyArray<empty>) => mixed) | hook (...args: $ReadOnlyArray<empty>) => mixed> =
                                                                                         ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/core.js:3125:47

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   3125| type Object$Assign = (target: any, ...source: $ReadOnlyArray<any>) => any;
                                                       ^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:137:28

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   137|   type ChildrenArray<+T> = $ReadOnlyArray<ChildrenArray<T>> | T;
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:158:18

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   158|     ...children: $ReadOnlyArray<React$Node>
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:828:17

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   828|       inputs?: ?$ReadOnlyArray<mixed>,
                        ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:841:17

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   841|       inputs?: ?$ReadOnlyArray<mixed>,
                        ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:850:43

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   850|     declare hook useCallback<T: (...args: $ReadOnlyArray<empty>) => mixed>(
                                                  ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:852:16

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   852|       inputs: ?$ReadOnlyArray<mixed>,
                       ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:863:16

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   863|       inputs: ?$ReadOnlyArray<mixed>,
                       ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:875:16

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   875|       inputs: ?$ReadOnlyArray<mixed>,
                       ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:921:17

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   921|       inputs?: ?$ReadOnlyArray<mixed>,
                        ^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- <BUILTINS>/react.js:988:30

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   988|     type ChildrenArray<+T> = $ReadOnlyArray<ChildrenArray<T>> | T;
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------- deprecated/keyof.js:3:10

The utility type `$Keys` is deprecated, use `keyof` instead. For example, `type KeyType = keyof MyObjectType;` 
[deprecated-utility]

   3| type T = $Keys<O>; // ERROR
               ^^^^^^^^


Error ---------------------------------------------------------------------------------- deprecated/nonMaybeType.js:1:10

The utility type `$NonMaybeType` is deprecated, use `NonNullable` instead. [deprecated-utility]

   1| type T = $NonMaybeType<?number>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------- deprecated/readonly.js:1:10

The utility type `$ReadOnly` is deprecated, use `Readonly` instead. [deprecated-utility]

   1| type T = $ReadOnly<{a: string}>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------- deprecated/readonly.js:7:23

Cannot assign object literal to `a` because property `b` is extra in object literal [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   deprecated/readonly.js:7:23
   7| let a: exportedType = {b: 1}; // ERROR
                            ^^^^^^ [1]

References:
   deprecated/readonly.js:7:8
   7| let a: exportedType = {b: 1}; // ERROR
             ^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- deprecated/readonly_type.js:3:10

The utility type `$ReadOnly` is deprecated, use `Readonly` instead. [deprecated-utility]

   3| type A = $ReadOnly<[string, number]>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- deprecated/readonly_type.js:4:10

The utility type `$ReadOnly` is deprecated, use `Readonly` instead. [deprecated-utility]

   4| type B = $ReadOnly<[number]>; // ERROR
               ^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------- deprecated/readonly_type.js:6:23

Cannot assign object literal to `a` because property `b` is extra in object literal [1] but missing in
`exportedType` [2]. Exact objects do not accept extra props. [incompatible-type]

   deprecated/readonly_type.js:6:23
   6| let a: exportedType = {b: 1}; // ERROR
                            ^^^^^^ [1]

References:
   deprecated/readonly_type.js:6:8
   6| let a: exportedType = {b: 1}; // ERROR
             ^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------- deprecated/readonly_type.js:10:29

Cannot assign `3` to `b` because number [1] is incompatible with `exportedValuesType` [2]. [incompatible-type]

   deprecated/readonly_type.js:10:29
   10| let b: exportedValuesType = 3; // ERROR
                                   ^ [1]

References:
   deprecated/readonly_type.js:10:8
   10| let b: exportedValuesType = 3; // ERROR
              ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- deprecated/readonlyarray.js:1:10

The utility type `$ReadOnlyArray` is deprecated, use `ReadonlyArray` instead. [deprecated-utility]

   1| type T = $ReadOnlyArray<number>; // error
               ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- deprecated/readonlymap.js:1:10

The utility type `$ReadOnlyMap` is deprecated, use `ReadonlyMap` instead. [deprecated-utility]

   1| type T = $ReadOnlyMap<string, number>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- deprecated/readonlymap.js:2:14

Cannot assign `3` to `x` because number [1] is incompatible with `$ReadOnlyMap` [2]. [incompatible-type]

   deprecated/readonlymap.js:2:14
   2| const x: T = 3; // ERROR
                   ^ [1]

References:
   deprecated/readonlymap.js:2:10
   2| const x: T = 3; // ERROR
               ^ [2]


Error ----------------------------------------------------------------------------------- deprecated/readonlyset.js:1:10

The utility type `$ReadOnlySet` is deprecated, use `ReadonlySet` instead. [deprecated-utility]

   1| type T = $ReadOnlySet<number>; // ERROR
               ^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------- deprecated/unknown.js:1:10

The utility type `mixed` is deprecated, use `unknown` instead. [deprecated-utility]

   1| type T = mixed; // ERROR
               ^^^^^


Error --------------------------------------------------------------------------------------- deprecated/unknown.js:3:10

The utility type `mixed` is deprecated, use `unknown` instead. [deprecated-utility]

   3| const x: mixed = 1; // ERROR
               ^^^^^


Error ---------------------------------------------------------------------------------------- deprecated/values.js:3:11

The utility type `$Values` is deprecated, use `Values` instead. [deprecated-utility]

   3| type T1 = $Values<O>; // ERROR
                ^^^^^^^^^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:1:20

The equivalent of TypeScript's `in` variance annotation is `-` in Flow. [ts-syntax]

   1| declare function f<in A>(A): void; // ERROR
                         ^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:1:20

Variance modifiers cannot appear on a type parameter of a function type. [unsupported-variance-annotation]

   1| declare function f<in A>(A): void; // ERROR
                         ^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:2:20

The equivalent of TypeScript's `out` variance annotation is `+` in Flow. [ts-syntax]

   2| declare function f<out A>(): A; // ERROR
                         ^^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:2:20

Variance modifiers cannot appear on a type parameter of a function type. [unsupported-variance-annotation]

   2| declare function f<out A>(): A; // ERROR
                         ^^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:3:20

The equivalent of TypeScript's `in out` variance annotation in Flow is to simply leave it out - it's the default if you
don't have a variance annotation. [ts-syntax]

   3| declare function f<in out A>(A): A; // ERROR
                         ^^^^^^


Error ------------------------------------------------------------------------------------------ in_out_variance.js:3:20

Variance modifiers cannot appear on a type parameter of a function type. [unsupported-variance-annotation]

   3| declare function f<in out A>(A): A; // ERROR
                         ^^^^^^


Error ---------------------------------------------------------------------------------------------------- never.js:1:10

The closest equivalent of TypeScript's `never` type in Flow is `empty`. [ts-syntax]

   1| type T = never; // ERROR
               ^^^^^


Error -------------------------------------------------------------------------------------------- readonly_type.js:1:10

The equivalent of TypeScript's `readonly` type operator applied to a tuple type is `$ReadOnly<[T, S]>`. [ts-syntax]

   1| type A = readonly [string, number]; // ERROR
               ^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- readonly_type.js:2:10

The equivalent of TypeScript's `readonly` type operator applied to an array type is `$ReadOnlyArray<T>`. [ts-syntax]

   2| type B = readonly string[]; // ERROR
               ^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- readonly_type.js:3:10

TypeScript's `readonly` type operator is not valid in Flow. For array types, you can use `$ReadOnlyArray<T>`. For object
and tuple types you can use `$ReadOnly<T>`. [ts-syntax]

   3| type C = readonly number; // ERROR
               ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------- readonly_variance.js:2:3

While TypeScript uses `readonly` to specify read only properties, Flow uses `+` in the form `+foo: T` for class and
object type properties, and `+[string]: T` for dictionaries. [ts-syntax]

   2|   readonly foo: string, // ERROR
        ^^^^^^^^


Error ---------------------------------------------------------------------------------------- readonly_variance.js:11:3

While TypeScript uses `readonly` to specify read only properties, Flow uses `+` in the form `+foo: T` for class and
object type properties, and `+[string]: T` for dictionaries. [ts-syntax]

   11|   readonly [string]: mixed; // ERROR
         ^^^^^^^^


Error ---------------------------------------------------------------------------------------- readonly_variance.js:15:3

While TypeScript uses `readonly` to specify read only properties, Flow uses `+` in the form `+foo: T` for class and
object type properties, and `+[string]: T` for dictionaries. [ts-syntax]

   15|   readonly prop: string; // ERROR
         ^^^^^^^^


Error ---------------------------------------------------------------------------------------- readonly_variance.js:19:3

While TypeScript uses `readonly` to specify read only properties, Flow uses `+` in the form `+foo: T` for class and
object type properties, and `+[string]: T` for dictionaries. [ts-syntax]

   19|   readonly prop: string; // ERROR
         ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- readonlymap.js:2:14

Cannot assign `3` to `x` because number [1] is incompatible with `$ReadOnlyMap` [2]. [incompatible-type]

   readonlymap.js:2:14
   2| const x: T = 3; // ERROR
                   ^ [1]

References:
   readonlymap.js:2:10
   2| const x: T = 3; // ERROR
               ^ [2]


Error ------------------------------------------------------------------------------------------------ satisfies.js:4:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this satisfies expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   4| export const a = m satisfies T; // ERROR
                       ^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ satisfies.js:4:18

The closest equivalent of TypeScript's `satisfies` expression in Flow is to do a cast in the form `<expr> as <type>`.
[ts-syntax]

   4| export const a = m satisfies T; // ERROR
                       ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- type_param_extends.js:1:8

While TypeScript uses `extends` to specify type parameter bounds, Flow uses `:` in the form `type T<A: B> = ...`.
[ts-syntax]

   1| type A<T extends string> = [T];
             ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- type_param_extends.js:2:8

While TypeScript uses `extends` to specify type parameter bounds, Flow uses `:` in the form `type T<A: B> = ...`.
[ts-syntax]

   2| type B<+T extends string> = [T];
             ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- type_param_extends.js:3:8

While TypeScript uses `extends` to specify type parameter bounds, Flow uses `:` in the form `type T<A: B> = ...`.
[ts-syntax]

   3| type C<T extends string = "hi"> = [T];
             ^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- type_param_extends.js:4:8

While TypeScript uses `extends` to specify type parameter bounds, Flow uses `:` in the form `type T<A: B> = ...`.
[ts-syntax]

   4| type D<+T extends string = "hi"> = [T];
             ^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ undefined.js:1:10

The equivalent of TypeScript's `undefined` type in Flow is `void`. Flow does not have separate `void` and `undefined`
types. [ts-syntax]

   1| type T = undefined; // ERROR
               ^^^^^^^^^



Found 85 errors
